syntax = "proto3";

package userproto;

service UserProtoService {
	rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
	rpc CheckUser(CheckUserRequest) returns (UserStatusResponse) {}
}

// Get User
message GetUserRequest {
	string user_id = 1;
}
message GetUserResponse {
    string id = 1;
    string first_name = 2;
	string last_name = 3;
    string email = 4;
}

// Check User
message CheckUserRequest {
	string user_id = 1;
}
message UserStatusResponse {
	bool is_exists = 1;
}